# bevy_mod_rust_gpu

./: Cargo.toml  rust-toolchain.toml
assets/shaders/rust_gpu_shaders/: Cargo.toml  rust-toolchain.toml
assets/shaders/rust_gpu_shaders/post_processing/: Cargo.toml
assets/shaders/rust_gpu_shaders/post_processing/src/: lib.rs
assets/shaders/rust_gpu_shaders/rave_shader/: Cargo.toml
assets/shaders/rust_gpu_shaders/rave_shader/src/: lib.rs
assets/shaders/rust_gpu_shaders/simplest_shader/: Cargo.toml
assets/shaders/rust_gpu_shaders/simplest_shader/src/: lib.rs
assets/shaders/rust_gpu_shaders/src/: lib.rs  main.rs
examples/: material.rs  post_processing.rs
src/: lib.rs  rave_material.rs
