# [workspace]
# members = ["assets/shaders/rust_gpu_shaders"]

[package]
name = "bevy_mod_rust_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["shader_format_spirv"] }

serde = "1.0.193"
rust_gpu_shaders = { path = "assets/shaders/rust_gpu_shaders"}
[features]
file_watcher = ["bevy/file_watcher"]
